redone index css and js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="app">
 
     <!-- PROFIL -->
-    <div id="view-profile" class="view">
+    <div id="view-profile" class="view active">
       <div id="profile-header">
         <p id="pseudo-display" class="profile-line"></p>
         <p id="level-display" class="profile-line">Level : 0</p>
@@ -55,7 +55,7 @@
 
     <!-- onglets en bas -->
     <div class="tabs">
-      <button id="tab-profile" class="tab active">PROFIL</button>
+      <button id="tab-profile" class="tab">PROFIL</button>
       <button id="tab-play"    class="tab">PLAY</button>
       <button id="tab-badges"  class="tab">REWARDS</button>
     </div>
