ADDED badges border and numbers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="view-profile" class="view active">
       <div id="profile-header">
         <p id="pseudo-display" class="profile-line"></p>
-        <p id="level-display" class="profile-line">Level : 0</p>
+        <p id="level-display" class="profile-line">Level of love : 0</p>
         <div id="xp-container">
           <div id="xp-bar"></div>
         </div>
