Fullscreen for mobile

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
   <!-- Empêche le zoom sur iOS lors du focus input -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Scratch & Badges</title>
-  <link rel="stylesheet" href="style.css"/>
 
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
+
+  <!-- Full-screen sur mobile -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css"/>
+
   <!-- Icône iOS -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
 </head>
