--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
 </head>
 <body>
+  <!-- conteneur d’intro Lottie -->
+  <div id="lottie-intro"
+       style="position:fixed; top:0; left:0; width:100vw; height:100vh;
+              background:#FFD1DC; z-index:200;">
+  </div>
+
   <div class="app">
 
     <!-- PROFIL -->
@@ -69,6 +75,10 @@
     </div>
 
   </div>
+
+  <!-- Lottie-web player -->
+  <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+  <!-- Votre logique JS -->
   <script src="script.js"></script>
 </body>
 </html>
