Start on profil screen

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- onglets en bas -->
     <div class="tabs">
-      <button id="tab-profile" class="tab">PROFIL</button>
+      <button id="tab-profile" class="tab active">PROFIL</button>
       <button id="tab-play"    class="tab">PLAY</button>
       <button id="tab-badges"  class="tab">REWARDS</button>
     </div>
