Profil screen info hidden before entering pseudo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <!-- PROFIL -->
     <div id="view-profile" class="view active">
-      <div id="profile-header">
+      <!-- header caché par défaut -->
+      <div id="profile-header" style="display: none;">
         <p id="pseudo-display" class="profile-line"></p>
         <p id="level-display" class="profile-line">Level of love : 0</p>
         <div id="xp-container">
