Fixed UI for mobile 2

--- a/index.html
+++ b/index.html
@@ -33,40 +33,34 @@
     <!-- PROFIL -->
     <div id="view-profile" class="view active">
 
-      <!-- STATUTS en Cartes -->
-      <div class="profile-stats">
-
+      <!-- STATUTS en Cartes (masqué par défaut, révélé après validation) -->
+      <div class="profile-stats" style="display:none;">
         <!-- Carte Pseudo (full width) -->
         <div class="stat-card full-width" id="card-pseudo">
           <strong>Pseudo</strong>
           <p id="pseudo-display"></p>
         </div>
-
         <!-- Carte Cartes Grattées -->
         <div class="stat-card" id="cards-scratched-card">
           <strong>Cards scratched</strong>
           <p id="cards-scratched">0</p>
         </div>
-
         <!-- Carte Rewards -->
         <div class="stat-card" id="rewards-count-card">
           <strong>Rewards</strong>
           <p id="rewards-count">0</p>
         </div>
-
         <!-- Carte Level -->
         <div class="stat-card" id="level-card">
           <strong>Level of love</strong>
           <p id="level-display">0</p>
         </div>
-
         <!-- Carte XP (full width) -->
         <div class="stat-card full-width" id="xp-card">
           <strong>XP Progress</strong>
           <div id="xp-container"><div id="xp-bar"></div></div>
           <p id="xp-text">0/100</p>
         </div>
-
       </div>
 
       <!-- Formulaire de saisie du pseudo (centré verticalement) -->
