--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <!-- Empêche le zoom sur iOS lors du focus input -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Scratch & Badges</title>
+  <title>Scratch Mouse</title>
 
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json">
@@ -15,8 +15,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-  <!-- Icône iOS -->
+  <!-- Icônes iOS -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="images/icon-192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="images/icon-512.png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css"/>
