--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
 
+  <!-- Icônes pour favicon et PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="images/icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="images/icon-512.png">
+
+  <!-- Icônes iOS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="images/icon-167.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="images/icon-152.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="images/icon-120.png">
+  <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
+
   <!-- Full-screen sur mobile -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-
-  <!-- Icônes iOS -->
-  <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
-  <link rel="apple-touch-icon" sizes="192x192" href="images/icon-192.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="images/icon-512.png">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css"/>
