Badge appears faster fixed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
 
-  <!-- Icônes pour favicon et PWA -->
+  <!-- Favicon & PWA icon -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="images/icon-512.png">
+  <link rel="shortcut icon" href="images/icon-192.png" type="image/png">
 
   <!-- Icônes iOS -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
@@ -41,7 +42,6 @@
        style="display:none;
               position:fixed; top:0; left:0;
               width:100vw; height:100vh;
-              background:rgba(0,0,0,0.5);
               z-index:300;
               justify-content:center;
               align-items:center;">
