Stable version without doodle jump

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <button id="reset-btn">Réinitialiser l’app</button>
     </div>
 
-    <!-- PLAY (Scratch) -->
+    <!-- PLAY -->
     <div id="view-play" class="view">
       <h2>SCRATCH</h2>
       <div id="scratch-area">
@@ -99,23 +99,11 @@
       <ul id="badges-list"></ul>
     </div>
 
-    <!-- JEU DOODLEJUMP -->
-    <div id="view-game" class="view">
-      <h2>JEU DOODLEJUMP</h2>
-      <iframe
-        id="game-frame"
-        src="https://grandmaitre84.github.io/doodlejump/"
-        frameborder="0"
-        allowfullscreen
-      ></iframe>
-    </div>
-
     <!-- onglets en bas -->
     <div class="tabs">
       <button id="tab-profile" class="tab active">PROFIL</button>
       <button id="tab-play"    class="tab">PLAY</button>
       <button id="tab-badges"  class="tab">REWARDS</button>
-      <button id="tab-game"    class="tab">JEU</button>
     </div>
 
   </div>
