--- a/index.html
+++ b/index.html
@@ -99,11 +99,27 @@
       <ul id="badges-list"></ul>
     </div>
 
+    <!-- JEU -->
+    <div id="view-game" class="view">
+      <h2>DOODLE JUMP</h2>
+      <div style="width:100vw; height:calc(100vh - 140px); max-width:100vw;">
+        <iframe
+          id="doodlejump-frame"
+          src="https://grandmaitre84.github.io/doodlejump/"
+          width="100%"
+          height="100%"
+          style="border:none; min-height:100%; min-width:100%;"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+
     <!-- onglets en bas -->
     <div class="tabs">
       <button id="tab-profile" class="tab active">PROFIL</button>
       <button id="tab-play"    class="tab">PLAY</button>
       <button id="tab-badges"  class="tab">REWARDS</button>
+      <button id="tab-game"    class="tab">JEU</button>
     </div>
 
   </div>
