--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
 
-  <!-- Favicon & PWA icon -->
+  <!-- Favicons -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="images/icon-512.png">
   <link rel="shortcut icon" href="images/icon-192.png" type="image/png">
 
-  <!-- Icônes iOS -->
+  <!-- iOS -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="images/icon-167.png">
   <link rel="apple-touch-icon" sizes="152x152" href="images/icon-152.png">
   <link rel="apple-touch-icon" sizes="120x120" href="images/icon-120.png">
   <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
-
-  <!-- Full-screen sur mobile -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -30,40 +28,44 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- conteneur d’intro Lottie -->
-  <div id="lottie-intro" style="position:fixed; top:0; left:0; width:100vw; height:100vh; background:#FFD1DC; z-index:200;"></div>
+  <!-- Intro Lottie -->
+  <div id="lottie-intro"
+       style="position:fixed; top:0; left:0; width:100vw; height:100vh;
+              background:#FFD1DC; z-index:200;">
+  </div>
 
-  <!-- conteneur d’animation badge (caché) -->
-  <div id="lottie-badge" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:300; justify-content:center; align-items:center;"></div>
+  <!-- Badge Lottie (caché) -->
+  <div id="lottie-badge"
+       style="display:none; position:fixed; top:0; left:0;
+              width:100vw; height:100vh; z-index:300;
+              justify-content:center; align-items:center;">
+  </div>
 
-  <!-- conteneur animation tâche faite (caché) -->
-  <div id="lottie-task-done" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.5); z-index:400; justify-content:center; align-items:center;"></div>
+  <!-- Task-done Lottie (caché) -->
+  <div id="lottie-task-done"
+       style="display:none; position:fixed; top:0; left:0;
+              width:100vw; height:100vh; background:rgba(0,0,0,0.5);
+              z-index:400; justify-content:center; align-items:center;">
+  </div>
 
   <div class="app">
-
     <!-- PROFILE -->
     <div id="view-profile" class="view active">
-      <h2>PROFILE</h2>
       <div class="profile-stats" style="display:none;">
         <div class="stat-card full-width" id="card-pseudo">
-          <strong>Pseudo</strong>
-          <p id="pseudo-display"></p>
+          <strong>Pseudo</strong><p id="pseudo-display"></p>
         </div>
         <div class="stat-card" id="cards-scratched-card">
-          <strong>Cards scratched</strong>
-          <p id="cards-scratched">0</p>
+          <strong>Cards scratched</strong><p id="cards-scratched">0</p>
         </div>
         <div class="stat-card" id="rewards-count-card">
-          <strong>Rewards</strong>
-          <p id="rewards-count">0</p>
+          <strong>Rewards</strong><p id="rewards-count">0</p>
         </div>
         <div class="stat-card" id="tasks-done-card">
-          <strong>Tasks completed</strong>
-          <p id="tasks-done-count">0</p>
+          <strong>Tâches effectuées</strong><p id="tasks-done-count">0</p>
         </div>
         <div class="stat-card" id="level-card">
-          <strong>Level of love</strong>
-          <p id="level-display">0</p>
+          <strong>Level of love</strong><p id="level-display">0</p>
         </div>
         <div class="stat-card full-width" id="xp-card">
           <strong>XP Progress</strong>
@@ -100,32 +102,23 @@
     <div id="view-todo" class="view">
       <h2>TO DO</h2>
       <div class="todo-input">
-        <input id="todo-input" type="text" placeholder="New task..." />
+        <input id="todo-input" type="text" placeholder="Nouvelle tâche…" />
         <button id="todo-add-btn">Ajouter</button>
       </div>
       <ul id="todo-list"></ul>
     </div>
 
-    <!-- GAME -->
-    <div id="view-game" class="view">
-      <h2>GAME</h2>
-      <div id="game-container"></div>
-    </div>
-
-    <!-- onglets en bas -->
+    <!-- onglets -->
     <div class="tabs">
-      <button id="tab-profile" class="tab active">PROFILE</button>
+      <button id="tab-profile" class="tab active">PROFIL</button>
       <button id="tab-play"    class="tab">PLAY</button>
       <button id="tab-badges"  class="tab">REWARDS</button>
       <button id="tab-todo"    class="tab">TO DO</button>
-      <button id="tab-game"    class="tab">GAME</button>
     </div>
-
   </div>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
