--- a/index.html
+++ b/index.html
@@ -9,44 +9,43 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
 
-  <!-- Favicons -->
+  <!-- Full‐screen sur mobile / standalone -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
+
+  <!-- Favicons & PWA icons -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="images/icon-512.png">
   <link rel="shortcut icon" href="images/icon-192.png" type="image/png">
 
-  <!-- iOS -->
+  <!-- Icônes iOS -->
   <link rel="apple-touch-icon" sizes="180x180" href="images/icon-180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="images/icon-167.png">
   <link rel="apple-touch-icon" sizes="152x152" href="images/icon-152.png">
   <link rel="apple-touch-icon" sizes="120x120" href="images/icon-120.png">
-  <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- Intro Lottie -->
+  <!-- intro Lottie -->
   <div id="lottie-intro"
        style="position:fixed; top:0; left:0; width:100vw; height:100vh;
-              background:#FFD1DC; z-index:200;">
-  </div>
+              background:#FFD1DC; z-index:200;"></div>
 
-  <!-- Badge Lottie (caché) -->
+  <!-- badge Lottie (caché) -->
   <div id="lottie-badge"
        style="display:none; position:fixed; top:0; left:0;
               width:100vw; height:100vh; z-index:300;
-              justify-content:center; align-items:center;">
-  </div>
+              justify-content:center; align-items:center;"></div>
 
-  <!-- Task-done Lottie (caché) -->
+  <!-- task‐done Lottie (caché) -->
   <div id="lottie-task-done"
        style="display:none; position:fixed; top:0; left:0;
               width:100vw; height:100vh; background:rgba(0,0,0,0.5);
-              z-index:400; justify-content:center; align-items:center;">
-  </div>
+              z-index:400; justify-content:center; align-items:center;"></div>
 
   <div class="app">
     <!-- PROFILE -->
@@ -62,21 +61,19 @@
           <strong>Rewards</strong><p id="rewards-count">0</p>
         </div>
         <div class="stat-card" id="tasks-done-card">
-          <strong>Tâches effectuées</strong><p id="tasks-done-count">0</p>
+          <strong>Tasks completed</strong><p id="tasks-done-count">0</p>
         </div>
         <div class="stat-card" id="level-card">
           <strong>Level of love</strong><p id="level-display">0</p>
         </div>
         <div class="stat-card full-width" id="xp-card">
           <strong>XP Progress</strong>
-          <div class="progress-bar">
-            <div class="progress-bar__fill" id="xp-bar"></div>
-          </div>
+          <div class="progress-bar"><div class="progress-bar__fill" id="xp-bar"></div></div>
           <p id="xp-text">0/100</p>
         </div>
       </div>
       <div id="profile-form" class="center-form">
-        <input id="pseudo-input" type="text" placeholder="Entrez votre pseudo" />
+        <input id="pseudo-input" type="text" placeholder="Entrez votre pseudo">
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
@@ -102,7 +99,7 @@
     <div id="view-todo" class="view">
       <h2>TO DO</h2>
       <div class="todo-input">
-        <input id="todo-input" type="text" placeholder="Nouvelle tâche…" />
+        <input id="todo-input" type="text" placeholder="Nouvelle tâche…">
         <button id="todo-add-btn">Ajouter</button>
       </div>
       <ul id="todo-list"></ul>
