App v0.3 (icons tabs + game)

--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#28a745">
 
-  <!-- Full‐screen sur mobile / standalone -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
-
-  <!-- Favicons & PWA icons -->
+  <!-- Favicon & PWA icon -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="images/icon-512.png">
   <link rel="shortcut icon" href="images/icon-192.png" type="image/png">
@@ -25,46 +19,57 @@
   <link rel="apple-touch-icon" sizes="167x167" href="images/icon-167.png">
   <link rel="apple-touch-icon" sizes="152x152" href="images/icon-152.png">
   <link rel="apple-touch-icon" sizes="120x120" href="images/icon-120.png">
+  <meta name="apple-mobile-web-app-title" content="Scratch Mouse">
+
+  <!-- Full-screen sur mobile -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <!-- intro Lottie -->
+  <!-- conteneur d’intro Lottie -->
   <div id="lottie-intro"
        style="position:fixed; top:0; left:0; width:100vw; height:100vh;
-              background:#FFD1DC; z-index:200;"></div>
+              background:#FFD1DC; z-index:200;">
+  </div>
 
-  <!-- badge Lottie (caché) -->
+  <!-- conteneur d’animation badge (caché par défaut) -->
   <div id="lottie-badge"
-       style="display:none; position:fixed; top:0; left:0;
-              width:100vw; height:100vh; z-index:300;
-              justify-content:center; align-items:center;"></div>
-
-  <!-- task‐done Lottie (caché) -->
-  <div id="lottie-task-done"
-       style="display:none; position:fixed; top:0; left:0;
-              width:100vw; height:100vh; background:rgba(0,0,0,0.5);
-              z-index:400; justify-content:center; align-items:center;"></div>
+       style="display:none;
+              position:fixed; top:0; left:0;
+              width:100vw; height:100vh;
+              z-index:300;
+              justify-content:center;
+              align-items:center;">
+  </div>
 
   <div class="app">
-    <!-- PROFILE -->
+
+    <!-- PROFIL -->
     <div id="view-profile" class="view active">
       <div class="profile-stats" style="display:none;">
         <div class="stat-card full-width" id="card-pseudo">
-          <strong>Pseudo</strong><p id="pseudo-display"></p>
+          <strong>Pseudo</strong>
+          <p id="pseudo-display"></p>
         </div>
         <div class="stat-card" id="cards-scratched-card">
-          <strong>Cards scratched</strong><p id="cards-scratched">0</p>
+          <strong>Cards scratched</strong>
+          <p id="cards-scratched">0</p>
         </div>
         <div class="stat-card" id="rewards-count-card">
-          <strong>Rewards</strong><p id="rewards-count">0</p>
+          <strong>Rewards</strong>
+          <p id="rewards-count">0</p>
         </div>
         <div class="stat-card" id="tasks-done-card">
-          <strong>Tasks completed</strong><p id="tasks-done-count">0</p>
+          <strong>Tâches effectuées</strong>
+          <p id="tasks-done-count">0</p>
         </div>
         <div class="stat-card" id="level-card">
-          <strong>Level of love</strong><p id="level-display">0</p>
+          <strong>Level of love</strong>
+          <p id="level-display">0</p>
         </div>
         <div class="stat-card full-width" id="xp-card">
           <strong>XP Progress</strong>
@@ -75,7 +80,7 @@
         </div>
       </div>
       <div id="profile-form" class="center-form">
-        <input id="pseudo-input" type="text" placeholder="Entrez votre pseudo">
+        <input id="pseudo-input" type="text" placeholder="Entrez votre pseudo" />
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
@@ -95,34 +100,52 @@
     <div id="view-badges" class="view">
       <h2>MY REWARDS</h2>
       <ul id="badges-list"></ul>
-      <div id="badges-pagination" class="pagination">
-        <button id="badges-prev" disabled>Prev</button>
-        <span id="badges-page-info">1 / 5</span>
-        <button id="badges-next">Next</button>
-      </div>
     </div>
 
     <!-- TO DO -->
     <div id="view-todo" class="view">
       <h2>TO DO</h2>
       <div class="todo-input">
-        <input id="todo-input" type="text" placeholder="Nouvelle tâche…">
+        <input id="todo-input" type="text" placeholder="Nouvelle tâche…" />
         <button id="todo-add-btn">Ajouter</button>
       </div>
       <ul id="todo-list"></ul>
     </div>
 
-    <!-- onglets -->
-    <div class="tabs">
-      <button id="tab-profile" class="tab active">PROFIL</button>
-      <button id="tab-play"    class="tab">PLAY</button>
-      <button id="tab-badges"  class="tab">REWARDS</button>
-      <button id="tab-todo"    class="tab">TO DO</button>
+    <!-- GAME -->
+    <div id="view-game" class="view">
+      <canvas id="game"></canvas>
+      <div id="gameOverScreen">
+        <h1>Game Over</h1>
+        <p>Score : <span id="gameOverScore">0</span></p>
+        <button id="replayBtn">Replay</button>
+      </div>
     </div>
+
+    <!-- onglets en bas -->
+    <div class="tabs">
+      <button id="tab-profile" class="tab active">
+        <img src="icons/user.png"   alt="Profil">
+      </button>
+      <button id="tab-play" class="tab">
+        <img src="icons/card.png"   alt="Play">
+      </button>
+      <button id="tab-badges" class="tab">
+        <img src="icons/trophy.png" alt="Rewards">
+      </button>
+      <button id="tab-todo" class="tab">
+        <img src="icons/check.png"  alt="To Do">
+      </button>
+      <button id="tab-game" class="tab">
+        <img src="icons/gamepad.png" alt="Game">
+      </button>
+    </div>
+
   </div>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
