--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
-      <div id="app-version">APP v0.1.2</div>
+      <div id="app-version">App v0.1.3</div>
     </div>
     
 
