--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p id="rewards-count">0</p>
         </div>
         <div class="stat-card" id="tasks-done-card">
-          <strong>Tâches effectuées</strong>
+          <strong>Tasks completed</strong>
           <p id="tasks-done-count">0</p>
         </div>
         <div class="stat-card" id="level-card">
@@ -99,7 +99,7 @@
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
-      <div id="app-version">App v0.1.4</div>
+      <div id="app-version">App v0.1.5 (30/06/2025)</div>
     </div>
     
 
