--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
-      <div id="app-version">App v0.1.6 (03/07/2025)</div>
+      <div id="app-version">App v0.1.7 (05/07/2025)</div>
     </div>
     
 
@@ -109,7 +109,7 @@
 
       <div class="scratch-wrapper">
         <div id="scratch-area">
-          <img id="scratch-image" src="images/card1.png" alt="Carte à gratter">
+          <img id="scratch-image" src="images/card1.webp" alt="Carte à gratter">
           <canvas id="scratchCanvas"></canvas>
         </div>
 
